// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNews> DOM element renders correctly with minimal required props 1`] = `
<div>
  <div
    className={null}
  >
    <span
      className="htz-a htz-b htz-c htz-d htz-e htz-f"
    >
      בראש החדשות:
       
    </span>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6651560"
      onClick={null}
    >
      הסלמה בדרום
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6652256"
      onClick={null}
    >
      בחירות מקומיות - סיבוב שני
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6652098"
      onClick={null}
    >
      משה ליאון
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6651765"
      onClick={null}
    >
      סטן לי
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6633616"
      onClick={null}
    >
      יום הרווקים הסיני 
       | 
    </a>
    <a
      className="htz-b htz-h htz-c htz-d htz-e htz-f"
      href="1.6652100"
      onClick={null}
    >
      הפודקאסט השבועי
    </a>
  </div>
</div>
`;

exports[`<TopNews> DOM element renders correctly with minimal required props 2`] = `".htz-a{color:#A8001C}.htz-b{font-weight:700}.htz-g{color:#222}.htz-h{color:#006B96}@media (max-width: 79.9375em){.htz-c{font-size:2.3333333333333335rem}.htz-d{line-height:1.2857142857142858em}}@media (min-width: 80em){.htz-e{font-size:2.2857142857142856rem}.htz-f{line-height:1.3125em}}"`;

exports[`<TopNews> DOM element renders correctly with minimal required props 3`] = `
<div>
  <div
    className="htz-a"
  >
    <span
      className="htz-a htz-b htz-c htz-d htz-e htz-f"
    >
      בראש החדשות:
       
    </span>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6651560"
      onClick={null}
    >
      הסלמה בדרום
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6652256"
      onClick={null}
    >
      בחירות מקומיות - סיבוב שני
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6652098"
      onClick={null}
    >
      משה ליאון
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6651765"
      onClick={null}
    >
      סטן לי
       | 
    </a>
    <a
      className="htz-b htz-g htz-c htz-d htz-e htz-f"
      href="1.6633616"
      onClick={null}
    >
      יום הרווקים הסיני 
       | 
    </a>
    <a
      className="htz-b htz-h htz-c htz-d htz-e htz-f"
      href="1.6652100"
      onClick={null}
    >
      הפודקאסט השבועי
    </a>
  </div>
</div>
`;

exports[`<TopNews> DOM element renders correctly with minimal required props 4`] = `".htz-a{color:#A8001C}.htz-b{font-weight:700}.htz-g{color:#222}.htz-h{color:#006B96}@media (max-width: 79.9375em){.htz-c{font-size:2.3333333333333335rem}.htz-d{line-height:1.2857142857142858em}}@media (min-width: 80em){.htz-e{font-size:2.2857142857142856rem}.htz-f{line-height:1.3125em}}"`;
